--- a/live/jpm.html
+++ b/live/jpm.html
@@ -11,10 +11,10 @@
     <meta property="og:video:height" content="326" /> 
     <meta property="og:video:width" content="486" /> 
     <meta property="og:video:type" content="application/x-shockwave-flash" />
-    <meta property="og:title" content="CELEBESTV" /> 
-    <meta property="og:description" content="Klik Gambarnya Boss untuk nonton CELEBESTV langsung lewat Facebook." />
-    <meta property="og:image" content="https://1.bp.blogspot.com/-VVqVePRl3-E/Uen9JWpWhiI/AAAAAAAAGBc/7MXQ8bx30Ns/s200/celebestv.png" />
-    <meta property="og:video" content="https://cdn1.mbahnunungonline.org/player/player5.8.swf?file=celebestv&type=rtmp&streamer=rtmp://118.97.183.222:1935/discover&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://lh3.googleusercontent.com/-sA3owq6VbIc/VKrLMrXu1tI/AAAAAAAAAMM/g-9sPK_Q9jc/s500/celebestv.jpg"/>
+    <meta property="og:title" content="JPMTV" /> 
+    <meta property="og:description" content="Klik Gambarnya Boss untuk nonton JPMTV langsung lewat Facebook." />
+    <meta property="og:image" content="https://1.bp.blogspot.com/-srcArm78NJE/YKlGtPP4uAI/AAAAAAAAM3s/qWNmcqpMEIUC9gh_RFKVJzKhBBNnC0c0ACLcBGAsYHQ/s0/jpm.png" />
+    <meta property="og:video" content="https://cdn1.mbahnunungonline.org/player/player5.8.swf?file=myStream&type=rtmp&streamer=rtmp://122.248.43.138:1935/ch6&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://lh3.googleusercontent.com/-sA3owq6VbIc/VKrLMrXu1tI/AAAAAAAAAMM/g-9sPK_Q9jc/s500/celebestv.jpg"/>
     <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
     <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
     <style type="text/css">
