--- a/live/tvone.html
+++ b/live/tvone.html
@@ -18,8 +18,8 @@
     <meta name="twitter:player:height" content="340">
     <meta name="twitter:player:stream" content="https://content.jwplatform.com/videos/r9DayX8C-640.mp4">
     <meta name="twitter:player:stream:content_type" content="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;">
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#2f3542; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
