--- a/live/antv.html
+++ b/live/antv.html
@@ -18,8 +18,8 @@
     <meta property="og:description" content="Klik Gambarnya Boss untuk nonton ANTV langsung lewat Facebook." />
     <meta property="og:image" content="https://3.bp.blogspot.com/-Qi81cAmRCTY/UcA-gJYONeI/AAAAAAAABw0/Dk26iChu5oY/s1600/antv.png" />
     <meta property="og:video" content="https://cdn1.mbahnunungonline.org/player/player5.8.swf?file=livestream&type=rtmp&streamer=rtmp://203.153.97.35:1935/live&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://lh3.googleusercontent.com/-rWOcN-rxkzg/VKrA4_0Ff-I/AAAAAAAAAHs/NcEmht194eg/s604/Antv_logo.png"/>
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#2f3542; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
