--- a/live/sctv.html
+++ b/live/sctv.html
@@ -15,8 +15,8 @@
     <meta property="og:description" content="Klik Gambarnya Boss untuk nonton SCTV langsung lewat Facebook." />
     <meta property="og:image" content="https://4.bp.blogspot.com/-MY_tDmwX6IM/UcA7YWdyNcI/AAAAAAAABvg/aW1BP6UtI_Q/s1600/sctv.png" />
     <meta property="og:video" content="https://cdn1.mbahnunungonline.net/player/player5.8.swf?file=livestream&type=rtmp&streamer=rtmp://xxxxxx&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://1.bp.blogspot.com/-kDtngMuap1o/VWvykuo0e2I/AAAAAAAAEq0/6Br99hZXvg8/s1600/inews-tv.jpg"/>
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#2f3542; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
