--- a/embed/iNewstv.html
+++ b/embed/iNewstv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
-    <source src="https://tv.mbahnunungonline.net/playlist/inewsPlaylist.m3u8" type="application/x-mpegurl">
+    <source src="https://cdn4.mbahnunungonline.net/m3u8/id/2f760b7cf8286be.m3u8" type="application/x-mpegurl">
   </video>
   <script>
     (function(){
