--- a/embed/sctv.html
+++ b/embed/sctv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-wSWj5Bh0hhM/W9GvNTXvG-I/AAAAAAAAJ1o/JNO9gkWCOIkpMnmjVcUx5C5DjA9NaYCigCPcBGAYYCw/s1600/sctv-tv-stream-c19bb7.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://rr2.dens.tv/s/s03/index2.m3u8" type="application/x-mpegURL" />
+        <source src="http://cdn4.mbahnunungonline.net/m3u8/id/2b8fc230e8f847a.m3u8" type="application/x-mpegURL" />
         </video>
      <script>
     (function(){
