--- a/embed/transtv.html
+++ b/embed/transtv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/dk5clz1v-720.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://rr2.dens.tv/s/s05/01.m3u8" type="application/x-mpegURL" />
+        <source src="http://cdn4.mbahnunungonline.net/m3u8/id/61061784f4a9270.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
