--- a/embed/dwtv.html
+++ b/embed/dwtv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
-    <source src="https://dwstream4-lh.akamaihd.net/i/dwstream4_live@131329/master.m3u8" type="application/x-mpegurl">
+    <source src="https://dwamdstream102.akamaized.net/hls/live/2015525/dwstream102/index.m3u8" type="application/x-mpegurl">
   </video>
   <script>
     (function(){
