--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript">
     </script>
     
-    <script src="https://cdn.jwplayer.com/players/l3Hde9mU-h5bP9bKQ.js?v=1.1.0.0.222"></script>
+    <script src="https://cdn.jwplayer.com/libraries/h5bP9bKQ.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "Mh/98M9sROX0uXhFlJwXZYeCxbJD5E1+e2goFcRZ07cI/FTu";</script>
   </head>
   <body>
