--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript">
     </script>
     
-    <script src="https://cdn.jwplayer.com/libraries/h5bP9bKQ.js?v=1.1.0.0.222"></script>
+    <script src="https://ssl.p.jwpcdn.com/player/v/8.23.2/jwplayer.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "z6xrDlaGWVmhBwj75HDWTawsq0itOyxDPsI3AhxoaH9AQD10CBObKQ==";</script>
   </head>
   <body>
