--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script type="text/javascript">
     </script>
     
-    <script src="//ssl.p.jwpcdn.com/player/v/8.23.2/jwplayer.js?v=1.1.0.0.222"></script>
-    <script>jwplayer.key = "Mh/98M9sROX0uXhFlJwXZYeCxbJD5E1+e2goFcRZ07cI/FTu";</script>
+    <script src="https://cdn.jwplayer.com/libraries/b1Tao5yJ.js?v=1.1.0.0.222"></script>
+    
   </head>
   <body>
     <center>
