--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <center>
     <div id="botr_Zorph2mI_bN3hVCOy_div"></div>
-    <script type="text/javascript" src="https://content.jwplatform.com/players/IQFkIV7M-GoiAFcI3.js"></script>
+    <script type="text/javascript" src="IQFkIV7M-GoiAFcI3.js"></script>
     <p id="description"></p>
     <script>
         if (window == window.top) {
