--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <center>
     <div id="botr_Zorph2mI_bN3hVCOy_div"></div>
-    <script type="text/javascript" src="https://tv.mbahnunungonline.net/IQFkIV7M-GoiAFcI3.js"></script>
+    <script type="text/javascript" src="https://content.jwplatform.com/players/IQFkIV7M-I0YbEkQ6.js"></script>
     <p id="description"></p>
     <script>
         if (window == window.top) {
