--- a/embed/iNewstv.html
+++ b/embed/iNewstv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
-    <source src="https://liveanevia.mncnow.id/live/eds/MNCTV-Merdeka/sa_dash/MNCTV-Merdeka.mpd" type="application/x-mpegurl">
+    <source src="https://dl.dropbox.com/s/6bebc476oy2g48n/2f760b7cf8286be.m3u8" type="application/x-mpegurl">
   </video>
   <script>
     (function(){
