--- a/embed/mytv.html
+++ b/embed/mytv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://content.jwplatform.com/v2/media/YtKBjwyn/poster.jpg?width=720" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://rr3.dens.tv/s/s88/S4/mnf.m3u8" type="application/x-mpegURL" />
+        <source src="//cdn4.mbahnunungonline.net/m3u8/id/f9973976ebde68c.m3u8" type="application/x-mpegURL" />
         
        </video>
      <script>
