--- a/live/bbstv.html
+++ b/live/bbstv.html
@@ -32,18 +32,17 @@
   
 <body style="width:100%;height:100%;padding:0;margin:0;background-color:transparent;">
 <div align="center">
-<iframe src="https://iframe.dacast.com/b/133335/c/503625" 
-        width="596" 
-        height="335" 
-        frameborder="0" 
-        scrolling="no" 
-        allow="autoplay" 
-        allowfullscreen 
-        webkitallowfullscreen 
-        mozallowfullscreen 
-        oallowfullscreen 
-        msallowfullscreen>
-	</iframe>
+<div id="player"></div>
+<iframe
+    src="/embed/bbstv"
+    height="340"
+    width="596"
+    frameborder="0"
+    scrolling="no"
+    allowfullscreen="true">
+</iframe>
 </div>
+</body>
+</html>
 </body>
 </html>
