--- a/embed/jaktv.html
+++ b/embed/jaktv.html
@@ -37,7 +37,7 @@
         title: 'JAKTV',       
         image: 'https://3.bp.blogspot.com/-TxC76ElPUEQ/XMsZnlEZe7I/AAAAAAAALZ0/1lIHh69eQXwNESzxplUoMj6vhzJlprCZwCLcBGAs/s1600/jaktv-tv-stream.jpg?v=8.3.2',       
         sources: [
-            {file: 'https://tv.mbahnunungonline.net/playlist/jaktv.m3u8'},
+            {file: 'http://cdn4.mbahnunungonline.net/m3u8/id/a6e7e966ea54cd3.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
