--- a/embed/daaitv.html
+++ b/embed/daaitv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-uFj1DCmT8Gs/UjlkUjelpeI/AAAAAAAABA0/4xsxfO0UogI/w1200-h630-p-k-no-nu/daai+tv.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://edge.nim.mivo.tv/daaitv/daaitv2_all/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="http://cdn4.mbahnunungonline.net/m3u8/id/0525ed2747e3161.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
