--- a/embed/jpm.html
+++ b/embed/jpm.html
@@ -16,7 +16,7 @@
       <div id="vjs-video-embed" class="left relative"></div>
       <div id="my-video" class="video_embed_hls post_embed_video_center">
       <video class="video-js vjs-default-skin vjs-16-9" controls autoplay></video>
-      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"JPM TV",poster:"https://upload.wikimedia.org/wikipedia/commons/5/5e/Logo_JPM_Jawapos.png?v=8.3.2",sources:[{src:"http://122.248.43.138:1935/ch6/myStream/Playlist.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
+      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"JPM TV",poster:"https://upload.wikimedia.org/wikipedia/commons/5/5e/Logo_JPM_Jawapos.png?v=8.3.2",sources:[{src:"https://jawapostv.siar.us/jawapostv/live/playlist.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
   </div>
  
   </body>
