--- a/embed/kompastv.html
+++ b/embed/kompastv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://i.imgur.com/6rmMN8f.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://cdn4.mbahnunungonline.net/m3u8/id/ae5f9d6bcd610b6.m3u8" type="application/x-mpegURL" />
+        <source src="https://cdn4.mbahnunungonline.net/m3u8/id/ae5f9d6bcd610b5.m3u8" type="application/x-mpegURL" />
         </video>
      <script>
     (function(){
