--- a/live/dangdutz.html
+++ b/live/dangdutz.html
@@ -23,7 +23,8 @@
     </style>
     <script type="text/javascript">
     </script>
-    <script src="//ssl.p.jwpcdn.com/player/v/8.20.2/jwplayer.js?v=1.1.0.0.222"></script>
+    <script src="//cdn4.mbahnunungonline.net/js/jw7-hlsjs-provider.js"></script>
+    <script src="//ssl.p.jwpcdn.com/player/v/8.2.2/jwplayer.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
 </head>
 <body bgcolor="transparent" text="white" topmargin="0" leftmargin="0" rightmargin="0">
