--- a/live/dangdutz.html
+++ b/live/dangdutz.html
@@ -23,7 +23,7 @@
     </style>
     <script type="text/javascript">
     </script>
-    <script src="//cdn4.mbahnunungonline.net/js/jw7-hlsjs-provider.js"></script>
+    //<script src="//cdn4.mbahnunungonline.net/js/jw7-hlsjs-provider.js"></script>
     <script src="//ssl.p.jwpcdn.com/player/v/8.2.2/jwplayer.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
 </head>
@@ -48,7 +48,7 @@
         title: 'Maleo Channel',       
         image: 'https://1.bp.blogspot.com/-dwkRQHKsuig/YLdj2p40j1I/AAAAAAAABDM/KTha5O3z1ikUI73Ex0L88Ikx-enlWlQSQCLcBGAsYHQ/s0/maleo.jp',       
         sources: [
-            {file: 'https://stream.ninmedia.tv/maleo/udp.stream/playlist.m3u8'},
+            {file: 'https://stb.mbahnunungonline.net/m3u/id/e22dc65d77c8885.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
