--- a/live/maleo.html
+++ b/live/maleo.html
@@ -5,7 +5,7 @@
     <meta name="robots" content="noindex">
     <meta property="fb:app_id" content="306338632814491"/>
     <meta property="og:type" content="warningfm:station"/>
-    <meta property="og:url" content="http://tv.mbahnunungonline.net/live/dangdutz"/>
+    <meta property="og:url" content="http://tv.mbahnunungonline.net/live/maleo"/>
     <meta property="og:type" content="movie" /> 
     <meta property="og:video:height" content="326" /> 
     <meta property="og:video:width" content="486" /> 
