--- a/live/maleo.html
+++ b/live/maleo.html
@@ -48,7 +48,7 @@
         title: 'Maleo Channel',       
         image: 'https://1.bp.blogspot.com/-dwkRQHKsuig/YLdj2p40j1I/AAAAAAAABDM/KTha5O3z1ikUI73Ex0L88Ikx-enlWlQSQCLcBGAsYHQ/s0/maleo.jp',       
         sources: [
-            {file: 'http://5d63d49f772ce.streamlock.net:1935/maleo/udp.stream/playlist.m3u8'},
+            {file: 'https://stream.ninmedia.tv/maleo/udp.stream_360p/playlist.m3u8'},
             {file: 'http://5d63d49f772ce.streamlock.net:1935/maleo/udp.stream_360p/playlist.m3u8'}
             ],
         captions: [
