--- a/embed/mqtv.html
+++ b/embed/mqtv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://upload.wikimedia.org/wikipedia/id/8/81/Logo_MQTV.png?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://v3.siar.us/syiarmedia/live/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://5bf7b725107e5.streamlock.net/mqtv/mqtv/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
