--- a/embed/tv9.html
+++ b/embed/tv9.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-DifMWPn0CBM/W92WwQgP3TI/AAAAAAAAAsM/Z27Vhx7_8Z0-uv3ZxhRHILHgq8emrOYhwCLcBGAs/s1600/tv9nusantara.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://wms.klikhost.net/tv9/tv9/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://5bf7b725107e5.streamlock.net/tv9/tv9/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
