--- a/embed/ntv.html
+++ b/embed/ntv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://1.bp.blogspot.com/-9qJppgBaEBU/YKn40vRsqSI/AAAAAAAAM4k/0ZkEXwMFDog0ZL9XoBLWj5Wds8CdrsXLwCLcBGAsYHQ/s0/nusantara-tv.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://v6.siar.us/nusantaratv/live/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://cdn.nng.cloudns.us/m3u8/378a642ff00fed9.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
