--- a/embed/elshintatv.html
+++ b/embed/elshintatv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-M8mlcK40_tA/W-f4QOPa4GI/AAAAAAAAKDE/JMZNmB7JLQY1awKGNlX7OSrt1DKOFJIYwCLcBGAs/s1600/elshintaTV.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://group2-swiftservesd-1.dens.tv/s/s10/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://s7.mbahnunungonline.net/live/m3u8/id/383fb71f4a76ab2.m3u8" type="application/x-mpegURL" />
         </video>
      <script>
     (function(){
