--- a/embed/indosiar.html
+++ b/embed/indosiar.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/7nbbbf6v-720.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://cdn4.mbahnunungonline.net/m3u8/id/575eeb9f08dc8db.m3u8" type="application/x-mpegURL" />
+        <source src="https://s7.mbahnunungonline.net/live/m3u8/id/575eeb9f08dc8db.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
