--- a/embed/metrotv2.html
+++ b/embed/metrotv2.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://i.imgur.com/SoL4TcZ.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://cp.medcom.id/live-edge/smil:metro.smil/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://edge.medcom.id/live-edge/smil:metro.smil/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
