--- a/embed/tvmuh.html
+++ b/embed/tvmuh.html
@@ -37,7 +37,7 @@
         title: 'TVMU',       
         image: 'https://2.bp.blogspot.com/-jxRFHO7z13w/W-hgLiSi7aI/AAAAAAAAKEA/gtlBn0192xoPNia2g4gNWJea1IdZlDgZACLcBGAs/s1600/logo_tvmu.jpg?v=8.3.2',       
         sources: [
-            {file: 'https://stream.ninmedia.tv/tvmu/udp.stream/playlist.m3u8'},
+            {file: 'https://e.siar.us/live/tvmu.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
