--- a/embed/jtv.html
+++ b/embed/jtv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-NYSqoTEERfY/XMsZIP-mYlI/AAAAAAAALZs/Ko_L0Zq5KvEzi_J0JOqdkePk_cD98U-NgCLcBGAs/s1600/JTVsuroboyo.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://edge.linknetott.swiftserve.com/channelgroup4/cg405production/ch17/index.m3u8" type="application/x-mpegURL" />
+        <source src="http://s7.mbahnunungonline.net/live/m3u8/id/226fe77699e03c6.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
