--- a/embed/cctv4.html
+++ b/embed/cctv4.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="../img/thumbs/cctv_4.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://raw.githubusercontent.com/ChiSheng9/iptv/master/TV20.m3u8" type="application/x-mpegURL" />
+        <source src="http://rr2.dens.tv/s/s19/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
