--- a/embed/berita1.html
+++ b/embed/berita1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+       
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
        <meta name="site_name" content="streaming" />
        <!-- End Meta Ads -->
-       <title>Live Streaming</title>
+       <title>BERITASATU Live Streaming</title>
        <style>
            body {
                margin:0;
@@ -19,10 +19,10 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://3.bp.blogspot.com/-uH1MqhDHK80/Xn65_sBzZkI/AAAAAAAAMMA/pPck0SJob6kY1rh3iHamm3junD4g6I-2wCLcBGAsYHQ/s1600/beritaSatu.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://thumbor.prod.vidiocdn.com/4HBTMNO-_vri_NmmDniraoabE4c=/filters:quality(70)/vidio-web-prod-livestreaming/uploads/livestreaming/image/6165/beritasatu-e7ed52.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://b1news.beritasatumedia.com/Beritasatu/B1News_manifest.m3u8" type="application/x-mpegURL" />
        </video>
-      <script>
+     <script>
     (function(){
       window.hola_player({title: 'BERITASATU'});
     })();
