--- a/tes.html
+++ b/tes.html
@@ -45,20 +45,20 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		abouttext: 'Design by : mbah nunung Online',
 		aboutlink: 'https://www.mbahnunungonline.net',
 		autostart: 'true',
-		file: "https://op-group1-swiftservehd-1.dens.tv/h/h06/01.m3u8",
+		file: "https://op-group1-swiftservehd-1.dens.tv/h/h06/index.m3u8",
 		title: "CNN Indonesia",
 		image: "https://4.bp.blogspot.com/-Gv5BnaZh7lE/Xn2UjQeWCKI/AAAAAAAAML0/ggApIyCguecnzZDSadWjl0PuoBMvkh9SQCLcBGAsYHQ/s1600/Logo-CNN-Indonesia720.jpg"
 	});
 	jwplayer().onError(function(){
 		jwplayer().load({
-			file: "https://op-group1-swiftservehd-1.dens.tv/h/h06/01.m3u8",
+			file: "https://op-group1-swiftservehd-1.dens.tv/h/h06/index.m3u8",
 			title: "CNN Indonesia",
 			//image:""
 		});jwplayer().play();
 		jwplayer().onError(function(){
 			jwplayer("streaming").setup({
 				primary: "html5",
-				file: "https://op-group1-swiftservehd-1.dens.tv/h/h06/01.m3u8",
+				file: "https://op-group1-swiftservehd-1.dens.tv/h/h06/index.m3u8",
 				title: "CNN Indonesia",
 				//image:""
 			});			
