--- a/live/net..html
+++ b/live/net..html
@@ -19,7 +19,7 @@
 <div align="center">
 <div id="player"></div>
 <iframe
-    src="/embed/nettv"
+    src="https://tv.mbahnunungonline.net/embed/nettv"
     height="340"
     width="596"
     frameborder="0"
