--- a/embed/nettv.html
+++ b/embed/nettv.html
@@ -15,7 +15,7 @@
                overflow: hidden;
            }
        </style>
-       <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
