--- a/embed/jaktv.html
+++ b/embed/jaktv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-TxC76ElPUEQ/XMsZnlEZe7I/AAAAAAAALZ0/1lIHh69eQXwNESzxplUoMj6vhzJlprCZwCLcBGAs/s1600/jaktv-tv-stream.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="//s7.mbahnunungonline.net/m3u8/id/a6e7e966ea54cd3.m3u8" type="application/x-mpegURL" />
+        <source src="https://op-group1-swiftservesd-1.dens.tv/s/s13/S4/mnf.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
